カラーコードを追加

--- a/src/styles/_color.sass
+++ b/src/styles/_color.sass
@@ -4,3 +4,6 @@ $green_dark: #24473b
 $green_light: #4f6c62
 $gray_dark: #e9eceb
 $gray_light: #f8f9f9
+
+$border_input: #a7b5b1
+$border_list: #d3dad8
