--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -21,3 +21,9 @@ a
 
 p, h1
   margin: 0
+
+input
+  font-size: $font_size_normal
+  font-weight: $font_weight_normal
+  padding: 0 2px
+  border: none
